--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- header始まり -->
   <header>
     <div class="logo">
-      <a href="index.html"><img src="https://github.com/koji-izumi/github.io/blob/main/logo.png" alt="SNAPPERS"></a>
+      <a href="index.html"><img src="logo.png" alt="SNAPPERS"></a>
     </div>
     <nav>
       <ul class="global-nav">
