--- a/photograph.html
+++ b/photograph.html
@@ -13,7 +13,7 @@
   <!-- header始まり -->
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
+      <a href="index.html"><img src="logo.png" alt="SNAPPERS"></a>
     </div>
     <nav>
       <ul class="global-nav">
@@ -34,34 +34,34 @@
         <section id="city">
           <h2 class="icon">City</h2>
           <ul class="clearfix photograph-list">
-            <li><img src="images/photograph-city-01.png" alt="駅への階段"></li>
-            <li><img src="images/photograph-city-02.png" alt="自転車とシャッター"></li>
-            <li><img src="images/photograph-city-03.png" alt="スケートパーク"></li>
-            <li><img src="images/photograph-city-04.png" alt="エアポート"></li>
-            <li><img src="images/photograph-city-05.png" alt="雑貨を扱う店舗"></li>
-            <li><img src="images/photograph-city-06.png" alt="ストリートバスケ"></li>
+            <li><img src="photograph-city-01.png" alt="駅への階段"></li>
+            <li><img src="photograph-city-02.png" alt="自転車とシャッター"></li>
+            <li><img src="photograph-city-03.png" alt="スケートパーク"></li>
+            <li><img src="photograph-city-04.png" alt="エアポート"></li>
+            <li><img src="photograph-city-05.png" alt="雑貨を扱う店舗"></li>
+            <li><img src="photograph-city-06.png" alt="ストリートバスケ"></li>
           </ul>
         </section>
         <section id="beach">
           <h2 class="icon">Beach</h2>
           <ul class="clearfix photograph-list">
-            <li><img src="images/photograph-beach-01.png" alt="海水浴場"></li>
-            <li><img src="images/photograph-beach-02.png" alt="ビーチへと続く道"></li>
-            <li><img src="images/photograph-beach-03.png" alt="離れ小島"></li>
-            <li><img src="images/photograph-beach-04.png" alt="岩場と波"></li>
-            <li><img src="images/photograph-beach-05.png" alt="ヤシの木"></li>
-            <li><img src="images/photograph-beach-06.png" alt="波打ち際"></li>
+            <li><img src="photograph-beach-01.png" alt="海水浴場"></li>
+            <li><img src="photograph-beach-02.png" alt="ビーチへと続く道"></li>
+            <li><img src="photograph-beach-03.png" alt="離れ小島"></li>
+            <li><img src="photograph-beach-04.png" alt="岩場と波"></li>
+            <li><img src="photograph-beach-05.png" alt="ヤシの木"></li>
+            <li><img src="photograph-beach-06.png" alt="波打ち際"></li>
           </ul>
         </section>
         <section id="forest">
           <h2 class="icon">Forest</h2>
           <ul class="clearfix photograph-list">
-            <li><img src="images/photograph-forest-01.png" alt="池と小舟"></li>
-            <li><img src="images/photograph-forest-02.png" alt="可憐な花"></li>
-            <li><img src="images/photograph-forest-03.png" alt="森の小径"></li>
-            <li><img src="images/photograph-forest-04.png" alt="清流をカップで掬う"></li>
-            <li><img src="images/photograph-forest-05.png" alt="焚き火台"></li>
-            <li><img src="images/photograph-forest-06.png" alt="新芽と若葉"></li>
+            <li><img src="photograph-forest-01.png" alt="池と小舟"></li>
+            <li><img src="photograph-forest-02.png" alt="可憐な花"></li>
+            <li><img src="photograph-forest-03.png" alt="森の小径"></li>
+            <li><img src="photograph-forest-04.png" alt="清流をカップで掬う"></li>
+            <li><img src="photograph-forest-05.png" alt="焚き火台"></li>
+            <li><img src="photograph-forest-06.png" alt="新芽と若葉"></li>
           </ul>
         </section>
       </div>
