--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <!-- header始まり -->
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
+      <a href="index.html"><img src="logo.png" alt="SNAPPERS"></a>
     </div>
     <nav>
       <ul class="global-nav">
@@ -39,7 +39,7 @@
                 世界各国を放浪しながら撮影をする中で、現在のアウトドアカメラマンとしてのスタイルを確立する。2016年に帰国し、「SNAPPERS」を設立。
                 <br>現在は、雑誌の表紙やカタログの撮影を中心に、映像作品などにもカメラマンとして参加するなど幅広く活躍している。</p>
             </div>
-            <img src="images/about-profile.png" alt="山田太郎プロフィール画像" class="profile-image">
+            <img src="about-profile.png" alt="山田太郎プロフィール画像" class="profile-image">
           </section>
           <section class="career">
             <h2 class="icon">Career and Job history</h2>
