--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <!-- header始まり -->
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
+      <a href="index.html"><img src="logo.png" alt="SNAPPERS"></a>
     </div>
     <nav>
       <ul class="global-nav">
