--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <!-- header始まり -->
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
+      <a href="index.html"><img src="logo.png" alt="SNAPPERS"></a>
     </div>
     <nav>
       <ul class="global-nav">
@@ -32,7 +32,7 @@
         <h1>Portfolio</h1>
         <p>これまでに撮影した写真や映像作品を掲載しています。</p>
         <section>
-          <h2><a href="photograph.html"><img src="images/portfolio-photo.jpg" alt="PHOTOGRAPH"></a>
+          <h2><a href="photograph.html"><img src="portfolio-photo.jpg" alt="PHOTOGRAPH"></a>
           </h2>
           <p>SNAPPERSでは「街-City-」「海-Beach-」「森-Forest-」の3つの場所で、様々な角度から「人の気配」を撮影します。
             人が写っていない写真の中にも確かにそこにあ、人の気配を感じとっていただけると嬉しいです。
@@ -40,7 +40,7 @@
           </p>
         </section>
         <section>
-          <h2><a href="video.html"><img src="images/portfolio-video.jpg" alt="VIDEO"></a>
+          <h2><a href="video.html"><img src="portfolio-video.jpg" alt="VIDEO"></a>
           </h2>
           <p>SNAPPERSでは映像作品も撮影しております。ドローンでの空撮やアクションカメラを使用した、屋外でのダイナミックな映像を得意としています。
             またショートフィルムを映画祭などで上映することもあります。
